wallet (1.2-1~ebp12.04+1) precise; urgency=medium

  * Backport to precise.
  * Drop build dependency on libnet-duo-perl, not available in precise.
  * Drop build dependency on libwebauth-perl, which is much too old in
    precise for the functionality wallet needs.
  * Add explicit build dependency on libjson-perl, which wasn't part of
    Perl core yet in precise.

 -- Russ Allbery <rra@debian.org>  Tue, 18 Aug 2015 09:41:24 -0700

wallet (1.2-1) unstable; urgency=medium

  * New upstream release.
    - New object types duo-radius, duo-ldap, and duo-rdp.
    - New rename command for file objects.
  * Add a gbp.conf file to reflect the branch layout and settings of the
    normal packaging repository.
  * Update standards version to 3.9.6 (no changes required).

 -- Russ Allbery <rra@debian.org>  Mon, 08 Dec 2014 21:13:21 -0800

wallet (1.1-1) unstable; urgency=medium

  * New upstream release.
    - New object type, duo, which creates a UNIX integration with the Duo
      Security cloud multifactor authentication service.
    - The owner and getacl commands now return the name of the ACL.
    - The date passed to expires can be any date format understood by
      Date::Parse.
    - wallet-rekey now works properly with keytabs containing multiple
      principals and does not store new principals in a separate file
      first.
    - Fix setting enctype restrictions on keytab objects and populate the
      reference table for valid enctypes on database creation.
    - Fix Wallet::Config documentation of ldap_map_principal.
    - Generate a long, random password when creating new principals in the
      Heimdal KDC to avoid problems with password quality checks.
    - Remove erroneous foreign key constraints between the object history
      and objects table, an incorrect linkage in the ACL history table,
      and add indices for object type, name, and ACL.
    - Use DateTime objects uniformly in the database layer.